# Payload_2025

./: .clang-format  .gitignore  .gitmodules  CODEOWNERS  README.md
firmware/Hardware-demo/: CMakeLists.txt  main.cpp  pwm_generic.hpp
firmware/bmp338/: CMakeLists.txt  bmp338.cpp  bmp338.h  bmp388.cpp  bmp388.h
firmware/bmp388/: CMakeLists.txt  bmp388.cpp  bmp388.h
firmware/bmp388_demo/: CMakeLists.txt  demo.cpp
firmware/bno055/: CMakeLists.txt  CmakeLists.txt  bno055.c  bno055.cpp  bno055.h
firmware/bno055/bno_demo/: CMakeLists.txt  demo.cpp
firmware/bno055/bno_driver/: CMakeLists.txt  bno055.cpp  bno055.h
firmware/demo_bno055/: CMakeLists.txt
firmware/flight/: .gitignore  CMakeLists.txt  DS1307.c  DS1307.h  audio_files.h  buzz.h  datalog.cc  datalog.hpp  fifo.hpp  main.cc  pins.h  ringBuff.hpp  runningCounter.hpp  state.hpp  timesync.py  tts.hpp
firmware/flight/dataviz/: datalog0.csv  datalog1.csv  datalog2.csv  datalog3.csv  datalog4.csv  datalog5.csv  datalog6.csv  datalog7.csv  viz.py
firmware/flight/sounds/: audio_to_buff.py  audio_trim_reduce.py  generate-sound.py
firmware/flight/sounds/compressed/: wavanal.c  wave_anal.py
firmware/micropython/: README.md  morse_and_tts.py
firmware/morse/: CmakeLists.txt  README.md  morse.c  morse.h
firmware/morse/tests/: CmakeLists.txt  main.cpp
firmware/pwm/: CmakeLists.txt  pwmGeneric.hpp
firmware/schedule/: CmakeLists.txt  schedule.c  schedule.h
firmware/schedule/example/: CMakeLists.txt  main.c
firmware/sd/: CmakeLists.txt
firmware/sd-interface/: SdCardC.C
firmware/sd/SD-demo/: CMakeLists.txt  main.cc
firmware/sd/src/: SD.cc  SD.hpp
firmware/sd/src/wave/: README.md  wave.c  wave.h
misc/: runningcounter.c  runningcounter.cpp
misc/py-datetime/: datetime_mac.py  datetime_windows.py  dt_win_2.py  main.py  main_old.py
